fix: header style on mobile devices

--- a/src/app/shared/components/header/Header.scss
+++ b/src/app/shared/components/header/Header.scss
@@ -28,6 +28,12 @@ header {
 		display: flex;
 		align-items: center;
 		list-style: none;
+
+		@media (max-width: 768px) {
+			flex: 1;
+			justify-content: center;
+		}
+
 		li {
 			a {
 				display: flex;
